finished initial draft of portfolio site

--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
             <!-- <a class="nav-item nav-link" href="#">About</a> -->
             <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link disabled" href="contact.htmls">Contact</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
           </div>
         </div>
       </nav>
@@ -67,7 +67,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright 2018 &copy; 
     </div>
   </footer>
 
