--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <a class="nav-item nav-link active" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
             <!-- <a class="nav-item nav-link" href="#">About</a> -->
             <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link disabled" href="contact.htmls">Contact</a>
+            <a class="nav-item nav-link disabled" href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
@@ -41,33 +41,92 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Portfolio</h1>
+      <h1>Portfolio (well it was supposed to be)</h1>
+      <h2>now its mostly just dog pics</h2>
+      <br>
+      <br>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
 
-        <h3>Word Guess</h3>
+            <div class="work">
+              <img src="assets/images/Odin_and_Thor_Chess.jpg" class="img-fluid" alt="Odin and Thor on my 
+              lap.">
+            </div>
+          </div>                  
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                <div class="container">
+                  <div class="col-md-8">
+                    <h3>Odin and Thor on my lap (they're Chugs).</h3>
+                  </div>
+                </div>
+         
 
-        <h3>RPG Game</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">      
+            <div class="work">
+              <img src="assets/images/Jaeger_7_and_Matt.jpg" class="img-fluid" alt="My son and myself. From about 8 years ago.">
+            </div>
+          </div>                  
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                <div class="container">
+                  <div class="col-md-8">
+                    <h3>My son and I, from 8 years ago.</h3>
+                  </div>
+                </div>
+   
 
-        <h3>Trivia Game</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work">
+              <img src="assets/images/Jaeger_Sleeping_with_Odin.jpg" class="img-fluid" alt="Jaeger sleeping with odin on his lap.">
+            </div>
+          </div>                  
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+              <div class="container">
+                <div class="col-md-8">
+                  <h3>Jaeger sleeping with Odin on his lap.  This is a recent photo, October 2018.</h3>
+                </div>
+              </div>
+   
 
-        <h3>Rutgers Info Widget</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work">
+              <img src="assets/images/Matt_and_Odin_Road_Warriors.jpg" class="img-fluid" alt="Matt and Odin road warriorst">
+            </div>
+          </div>                  
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+              <div class="container">
+                <div class="col-md-8">
+                  <h3>Odin and myself on our way back from North Dakota, October 2018.</h3>
+                </div>
+              </div>
+  
 
-        <h3>Rock Paper Scissors</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+           <div class="work">
+              <img src="assets/images/Thor_on_Messy_Bed.jpg" class="img-fluid" alt="Thor on bed">
+            </div>
+          </div>                  
+        </div>
       </div>
+              <div class="container">
+                <div class="col-md-8">
+                  <h3>Thor on bed, October 2018.</h3>>
+                </div>
+              </div>
+     
 
     </section>
 
@@ -75,7 +134,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy;
+      Copyright 2018 &copy;
     </div>
   </footer>
 
