added a note for the TA's... they probably won't even notice

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </p>
 
       <p>
-        I also help a few local churches with their websites.  Check out some links to see my attempts at webberizing (a.k.a Website Development).  :-) 
+        I also help a few local churches with their websites.  Check out some links to see my attempts at webberizing (a.k.a Website Development).  :-)   [note to TA's who may be reading this.....   there aren't really any links yet  :-)]
 
       </p>
 
