--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
                 </div>
    
 
-      <div class="container">
+      <div class="container">git
         <div class="row">
           <div class="col-md-4">
             <div class="work">
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work">
-              <img src="assets/images/Matt_and_Odin_Road_Warriors.jpg" class="img-fluid" alt="Matt and Odin road warriorst">
+              <img src="assets/images/Matt_and_Odin_Road_Warriors.jpg" class="img-fluid" alt="Matt and Odin road warriors">
             </div>
           </div>                  
         </div>
