added link to Liri-Bot

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,34 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Portfolio (well it was supposed to be)</h1>
-      <h2>now its mostly just dog pics</h2>
+      <h3>Portfolio (well it was supposed to be)</h3>
+      <h5>now its mostly just dog pics</h5>
+      <br>
+      <h2>BUT WAIT!!!!   HE UPDATED IT!!!  the first one isn't dog pics anymore!!</h2>
       <br>
       <br>
 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+
+            <div class="work">
+              <!-- <img src="assets/images/Odin_and_Thor_Chess.jpg" class="img-fluid" alt="Odin and Thor on my lap."> -->
+            </div>
+          </div>                  
+        </div>
+      </div>
+                <div class="container">
+                  <div class="col-md-8">
+                    <h3>Link to my LIRI-bot coded in Javascript on GitHub</h3>
+                    <a href="https://github.com/mra-abrahamson/liri-node-app">Liri-bot</a>
+                  </div>
+                </div>
+<br>
+<br>
+<br>
+<br>
+<br>
       <div class="container">
         <div class="row">
           <div class="col-md-4">
