--- a/portfolio.html
+++ b/portfolio.html
@@ -74,15 +74,17 @@
           <div class="col-md-4">
 
             <div class="work">
-              <img src="assets/images/Odin_and_Thor_Chess.jpg" class="img-fluid" alt="Odin and Thor on my 
-              lap.">
+              <h3>This is a link to a fun Friend Finder App I created.</h3>
+              <a href="https://github.com/mra-abrahamson/Bootstrap-Portfolio.git">Git Hub Repo for Friend Finder App</a>
+              <a href="https://finderoffriend.herokuapp.com/">Link to website where it is deployed</a>
+              
             </div>
           </div>                  
         </div>
       </div>
                 <div class="container">
                   <div class="col-md-8">
-                    <h3>Odin and Thor on my lap (they're Chugs).</h3>
+                    <h3>This is my first use of Heroku to run a full stack program.</h3>
                   </div>
                 </div>
          
